--- a/Leccion_9_elementos_semanticos/CSS/estilos.css
+++ b/Leccion_9_elementos_semanticos/CSS/estilos.css
@@ -1,9 +1,19 @@
 /* como son etiquetas semanticas no reuqiere de agregar class o id */
-body{
-    background-color: #f7f7f7;
+body {
+    background-image: url('../imagenes/pexels-apasaric.jpg'); /* Ruta de la imagen */
+    background-size: cover;   /* Hace que la imagen cubra todo el body */
+    background-position: center; /* Centra la imagen en el cuerpo */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    margin: 0;  /* Elimina los márgenes predeterminados del body */
+    height: 100vh; /* Hace que el body ocupe toda la altura de la ventana */
+    
+    
+    /* Atenuar la imagen usando el filtro de brillo */
+    filter: brightness(100%); /* Atenúa la imagen reduciendo el brillo */
 }
+
 header{
-    color: #bbdb3c;
+    color: #0c0f01b1;
     text-align: center;
     font-size: 20px;
 }
@@ -14,24 +24,25 @@ nav{
     float: left;
 }
 nav a{
-    background-color: #D9E997;
+    background-color: #5f867d;
     border-radius: 10px 0 10px 0;
-    color: black;
+    text-decoration-color: azure;
+    color: azure;
+    font-size: x-large;
     margin: 10px;
     padding: 10px;
-    text-decoration: none;
     /* convertirlos a tipo bloque */
-    display: block;
+    display: flow-root;
 }
 section{
-    float: right;
+    float: inline-start;
     width: 75%;
-    color: #D9E997;
+    color: #5f867d;
     border-radius: 5px;
     /* border: 1px solid black; */
-    box-shadow: 1px 0 4px rgb(0,0,0,.2);
+    box-shadow: 1px 0 4px rgba(27, 154, 105, 0.888);
     margin-bottom: 15px;
-    padding: 15px;
+    padding: 10px;
 }
 
 aside{
@@ -41,12 +52,17 @@ aside{
     margin: 5px;
     font-style: italic;
     color: #4361ee;
-    box-shadow: inset 5px 0 5px -5px #4895ef;
+    box-shadow: inset 5px 0 5px -5px #327a04;
 }
 
-footer{
+footer {
     /* Limpiamos tanto lo que este a la izq o der y se posiciona en la siguiente linea */
     clear: both;
     padding: 1px;
     text-align: center;
+}
+
+footer a{
+    text-decoration: none;
+    color: black;
 }
